--- a/VPNStatus/Base.lproj/MainMenu.xib
+++ b/VPNStatus/Base.lproj/MainMenu.xib
@@ -15,11 +15,11 @@
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
-                <menuItem title="VPNStatus" id="1Xt-HY-uBw">
+                <menuItem title="VPN Auto Re-Connect" id="1Xt-HY-uBw">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="VPNStatus" systemMenu="apple" id="uQy-DD-JDr">
+                    <menu key="submenu" title="VPN Auto Re-Connect" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About VPNStatus" id="5kV-Vb-QxS">
+                            <menuItem title="About VPN Auto Re-Connect" id="5kV-Vb-QxS">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-1" id="Exp-CZ-Vem"/>
@@ -31,7 +31,7 @@
                                 <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                            <menuItem title="Hide VPNStatus" keyEquivalent="h" id="Olw-nP-bQN">
+                            <menuItem title="Hide VPN Auto Re-Connect" keyEquivalent="h" id="Olw-nP-bQN">
                                 <connections>
                                     <action selector="hide:" target="-1" id="PnN-Uc-m68"/>
                                 </connections>
@@ -49,7 +49,7 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                            <menuItem title="Quit VPNStatus" keyEquivalent="q" id="4sb-4s-VLi">
+                            <menuItem title="Quit VPN Auto Re-Connect" keyEquivalent="q" id="4sb-4s-VLi">
                                 <connections>
                                     <action selector="terminate:" target="-1" id="Te7-pn-YzF"/>
                                 </connections>
